[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/PlayerSprites.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.12429, 7.94698 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10, 3.61674 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 4, 8 ]
}

[sub_resource type="Animation" id=6]
resource_name = "jump_fast"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=7]
resource_name = "jump_slow"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=3]
resource_name = "run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 4, 0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "slide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 8, 12, 8 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 2.14987, 7.97025 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 4
hframes = 4
frame = 11
region_rect = Rect2( 4.23868, -0.744033, 8.7572, 15.6379 )

[node name="Standing_Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0.0625, 0.0390625 )
shape = SubResource( 1 )

[node name="Sliding_Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0.110485, 4.35313 )
shape = SubResource( 8 )
disabled = true

[node name="Sliding_Ray" type="RayCast2D" parent="."]
position = Vector2( 0, 1 )
cast_to = Vector2( 0, -8.8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/jump_fast = SubResource( 6 )
anims/jump_slow = SubResource( 7 )
anims/run = SubResource( 3 )
anims/slide = SubResource( 9 )
anims/walk = SubResource( 4 )

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
visible = false
position = Vector2( -0.0220966, 0.0994368 )
shape = SubResource( 5 )
